Add v1/users/address to find user IDs by associated wallet or account addresses (#285)
Finds user IDs associated with given addresses of wallets or accounts.

This not only enables the Discord bot to do signature recovery and find
the relevant account without needing us to change the authentication of
the v1/users/account/:wallet route, but also allows for more general
user locating based on associated addresses by any means besides just
their account wallet, which opens the door to doing "1-click purchase"
if a user buys with a connected wallet on a third party site, etc.

TODO:
- [ ] Add test
- [ ] Swagger
